...
    var viewModel: PostsViewModel?
    
    // MARK: - Subviews
    
    @IBOutlet weak var addPostButton: UIBarButtonItem? {
        didSet {
            addPostButton?.accessibilityLabel = "Add post"
        }
    }
    
    // MARK: - UIViewController Lifecycle
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        title = "Posts"
        tableView.tableFooterView = UIView()
        
        bindToViewModel()
    }

    
...
